fix url bug